--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/main.css".css">
     <title>CV Doc Emmet Brown</title>
 </head>
 <body>
     <header>
-        <nav></nav>
+        <nav>
+            <h1>Hello World!</h1>
+        </nav>
     </header>
     <main>
         <section id="profile"></section>
@@ -16,7 +19,7 @@
         <section id="contact"></section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
