--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/main.css".css">
+    <link rel="stylesheet" href="CSS/main.css">
     <title>CV Doc Emmet Brown</title>
 </head>
 <body>
@@ -13,7 +13,9 @@
         </nav>
     </header>
     <main>
-        <section id="profile"></section>
+        <section id="profile">
+            <img src="Assets/portraitDoc.jpeg" alt="avatarDoc">
+        </section>
         <section id="experience"></section>
         <section id="education"></section>
         <section id="contact"></section>
