created font variables css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <nav>
             <h1>Hello World!</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero temporibus maxime eius! Asperiores vitae dignissimos accusamus repudiandae officia ratione, at nostrum sapiente eveniet esse a in quae, voluptas vel iste.</p>
         </nav>
     </header>
     <main>
