added colours variables

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <header>
         <nav>
             <h1>Hello World!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero temporibus maxime eius! Asperiores vitae dignissimos accusamus repudiandae officia ratione, at nostrum sapiente eveniet esse a in quae, voluptas vel iste.</p>
         </nav>
     </header>
     <main>
+        <p>Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing</a> elit. Libero temporibus maxime eius! Asperiores vitae dignissimos accusamus repudiandae officia ratione, at nostrum sapiente eveniet esse a in quae, voluptas vel iste.</p>
+
         <section id="profile">
-            <img src="Assets/portraitDoc.jpeg" alt="avatarDoc">
+            <img src="Assets/docpicture.png" alt="avatarDoc">
         </section>
         <section id="experience"></section>
         <section id="education"></section>
