--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <header>
         <nav>
-            <h1>Hello World!</h1>
+            <h1>Dr. Emmett Brown</h1>
         </nav>
     </header>
     <main>
+        <h2>Hello World</h2>
         <p>Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing</a> elit. Libero temporibus maxime eius! Asperiores vitae dignissimos accusamus repudiandae officia ratione, at nostrum sapiente eveniet esse a in quae, voluptas vel iste.</p>
 
         <section id="profile">
