script too add icons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/main.css">
     <title>CV Doc Emmet Brown</title>
+    <script src="https://kit.fontawesome.com/7aa17d357a.js" crossorigin="anonymous"></script> <!--Script pour ajouter des icons-->
 </head>
 <body>
     <header>
