--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Main Styles -->
     <link rel="stylesheet" href="CSS/main.css">
+    <!--Script pour ajouter des icons-->
+    <script src="https://kit.fontawesome.com/7aa17d357a.js" crossorigin="anonymous"></script> 
     <title>CV Doc Emmet Brown</title>
-    <script src="https://kit.fontawesome.com/7aa17d357a.js" crossorigin="anonymous"></script> <!--Script pour ajouter des icons-->
+    
 </head>
 <body>
     <header>
