--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         <section id="contact"></section>
     </main>
     <footer>
+        <ul>
+            <li class="insta"><a href="https://www.instagram.com/mrchristopherlloyd/?hl=fr"><i class="fab fa-instagram"></i></a></li>
+            <li class="facebook"><a href="https://www.facebook.com/thechristopherlloyd"><i class="fab fa-facebook-f"></i></a></li>
+            <li class="linkedin"><a href="https://www.linkedin.com/company/mad-scientist/"><i class="fab fa-linkedin-in"></i></a></li>
+        </ul>
+        
 
     </footer>
 </body>
