modification body main.css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,16 @@
         </section>
         <section id="experience"></section>
         <section id="education"></section>
-        <section id="contact"></section>
+        <section id="contact">
+            <form action="">
+                <h2 class="contact">Contact me</h2>
+                <input type="name" placeholder="Votre nom">
+                <input type="text" placeholder="société">
+                <input type="text" placeholder="0601020304">
+                <input type="email" placeholder="@">
+                <textarea placeholder="Your message"></textarea>
+            </form>
+        </section>
     </main>
     <footer>
 
