--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <p>Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing</a> elit. Libero temporibus maxime eius! Asperiores vitae dignissimos accusamus repudiandae officia ratione, at nostrum sapiente eveniet esse a in quae, voluptas vel iste.</p>
 
         <section id="profile">
-            <img src="Assets/docpicture.png" alt="avatarDoc">
+            <img src="Assets/portraitDoc.jpeg" alt="avatarDoc">
+            <h2>About me</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis dolorum doloremque quasi nam maxime totam, aliquam, unde obcaecati possimus veritatis recusandae dolor ad velit, eligendi consectetur vero corporis minima placeat?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis dolorum doloremque quasi nam maxime totam, aliquam, unde obcaecati possimus veritatis recusandae dolor ad velit, eligendi consectetur vero corporis minima placeat?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis dolorum doloremque quasi nam maxime totam, aliquam, unde obcaecati possimus veritatis recusandae dolor ad velit, eligendi consectetur vero corporis minima placeat?</p>
         </section>
         <section id="experience"></section>
         <section id="education"></section>
