--- a/index.html
+++ b/index.html
@@ -25,12 +25,33 @@
         <section id="contact"></section>
     </main>
     <footer>
-        <ul>
-            <li class="insta"><a href="https://www.instagram.com/mrchristopherlloyd/?hl=fr"><i class="fab fa-instagram"></i></a></li>
-            <li class="facebook"><a href="https://www.facebook.com/thechristopherlloyd"><i class="fab fa-facebook-f"></i></a></li>
-            <li class="linkedin"><a href="https://www.linkedin.com/company/mad-scientist/"><i class="fab fa-linkedin-in"></i></a></li>
+        <ul class="icons">
+            <li class="insta"><a href="https://www.instagram.com/mrchristopherlloyd/?hl=fr"><i class="fab fa-instagram" style="font-size: 50px;"></i></a></li>
+            <li class="facebook"><a href="https://www.facebook.com/thechristopherlloyd"><i class="fab fa-facebook-f" style="font-size: 50px;"></i> </i></a></li>
+            <li class="linkedin"><a href="https://www.linkedin.com/company/mad-scientist/"><i class="fab fa-linkedin-in" style="font-size: 50px;"></i></i></a></li>
         </ul>
-        
+
+        <div id="title-faq">FAQ</div>
+
+        <!--<div id="faq">
+            <p class="question">Est-ce que je peut conduire la DeLorean ?</p>
+            <p class="answer">Malheureusment après mon dernier voyage, elle ne peut plus accepter personne autre que moi, elle est devenu dans un sens indépendante.</p>
+            <p class="question">Pourquoi chercher du travail après avoir déjà accompli tant de choses ?</p>
+            <p class="answer">Ayant une soif de connaissance inétenchable, il n'est jamais trop tard pour moi d'apprendre de nouvelle choses.</p>
+            <p class="question">Je peux avoir un autographe ?</p>
+            <p class="answer">Vous l'aurez en bas de mon futur contrat.</p>
+            <p class="question">Quel salaire envisagez-vous ?</p>
+            <p class="answer">Je n'en ai pas en tête, suffisament pour pouvoir emmener ma DeLorean à sa révision mensuelle.</p>
+            <p class="question">Avez-vous des qualités principales ?</p>
+            <p class="answer">Je dirait sans hésiter : beau, dans la force de l'âge et sain d'esprit.</p>
+            <p class="question">Existe-t'il encore des personnes qui vous inspirent dans ce monde ?</p>
+            <p class="answer">Philippe Candeloro, réellement je n'ai jamais connu quelqu'un d'aussi exceptionnel, c'est une source d'inspiration quotidienne.</p>
+        </div> -->
+
+        <div id="top"><a href="#"><i class="fas fa-arrow-circle-up"></i></a></div>
+
+
+
 
     </footer>
 </body>
