--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <section id="education"></section>
         <section id="contact"></section>
     </main>
-    <footer>
+    <footer class="foot">
         <ul class="icons">
-            <li class="insta"><a href="https://www.instagram.com/mrchristopherlloyd/?hl=fr"><i class="fab fa-instagram" style="font-size: 50px;"></i></a></li>
-            <li class="facebook"><a href="https://www.facebook.com/thechristopherlloyd"><i class="fab fa-facebook-f" style="font-size: 50px;"></i> </i></a></li>
-            <li class="linkedin"><a href="https://www.linkedin.com/company/mad-scientist/"><i class="fab fa-linkedin-in" style="font-size: 50px;"></i></i></a></li>
+            <li class="insta"><a href="https://www.instagram.com/mrchristopherlloyd/?hl=fr"><i class="fab fa-instagram" ></i></a></li>
+            <li class="facebook"><a href="https://www.facebook.com/thechristopherlloyd"><i class="fab fa-facebook-f" ></i> </i></a></li>
+            <li class="linkedin"><a href="https://www.linkedin.com/company/mad-scientist/"><i class="fab fa-linkedin-in" ></i></i></a></li>
         </ul>
 
-        <div id="title-faq">FAQ</div>
+        <div class="title-faq">FAQ</div>
 
         <!--<div id="faq">
             <p class="question">Est-ce que je peut conduire la DeLorean ?</p>
@@ -48,7 +48,7 @@
             <p class="answer">Philippe Candeloro, réellement je n'ai jamais connu quelqu'un d'aussi exceptionnel, c'est une source d'inspiration quotidienne.</p>
         </div> -->
 
-        <div id="top"><a href="#"><i class="fas fa-arrow-circle-up"></i></a></div>
+        <div class="top"><a href="#"><i class="fas fa-arrow-circle-up"></i></a></div>
 
 
 
