--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <li class="linkedin"><a href="https://www.linkedin.com/company/mad-scientist/"><i class="fab fa-linkedin-in" ></i></i></a></li>
         </ul>
 
-        <div class="title-faq">FAQ</div>
+        <button  class="title-faq" id="faqbtn">FAQ</button>
 
-        <!--<div id="faq">
+        <div id="faq" class="hide">
             <p class="question">Est-ce que je peut conduire la DeLorean ?</p>
             <p class="answer">Malheureusment après mon dernier voyage, elle ne peut plus accepter personne autre que moi, elle est devenu dans un sens indépendante.</p>
             <p class="question">Pourquoi chercher du travail après avoir déjà accompli tant de choses ?</p>
@@ -46,7 +46,7 @@
             <p class="answer">Je dirait sans hésiter : beau, dans la force de l'âge et sain d'esprit.</p>
             <p class="question">Existe-t'il encore des personnes qui vous inspirent dans ce monde ?</p>
             <p class="answer">Philippe Candeloro, réellement je n'ai jamais connu quelqu'un d'aussi exceptionnel, c'est une source d'inspiration quotidienne.</p>
-        </div> -->
+        </div> 
 
         <div class="top"><a href="#"><i class="fas fa-arrow-circle-up"></i></a></div>
 
@@ -54,5 +54,7 @@
 
 
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
