--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/main.css">
     <title>CV Doc Emmet Brown</title>
-    <script src="https://kit.fontawesome.com/7aa17d357a.js" crossorigin="anonymous"></script> <!--Script pour ajouter des icons-->
+    <script src="https://kit.fontawesome.com/7aa17d357a.js" crossorigin="anonymous"></script>
+    <!--Script pour ajouter des icons-->
 </head>
+
 <body>
     <header>
         <nav>
@@ -15,7 +18,9 @@
     </header>
     <main>
         <h2>Hello World</h2>
-        <p>Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing</a> elit. Libero temporibus maxime eius! Asperiores vitae dignissimos accusamus repudiandae officia ratione, at nostrum sapiente eveniet esse a in quae, voluptas vel iste.</p>
+        <p>Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing</a> elit. Libero temporibus maxime eius!
+            Asperiores vitae dignissimos accusamus repudiandae officia ratione, at nostrum sapiente eveniet esse a in
+            quae, voluptas vel iste.</p>
 
         <section id="profile">
             <img src="Assets/docpicture.png" alt="avatarDoc">
@@ -24,29 +29,40 @@
         <section id="education"></section>
         <section id="contact"></section>
     </main>
+
+    <div id="faq" class="hide">
+        <p class="foire">Foire aux questions</p>
+        <p class="question">Est-ce que je peut conduire la DeLorean ?</p>
+        <p class="answer">Malheureusment après mon dernier voyage, elle ne peut plus accepter personne autre que moi,
+            elle est devenu dans un sens indépendante.</p>
+        <p class="question">Pourquoi chercher du travail après avoir déjà accompli tant de choses ?</p>
+        <p class="answer">Ayant une soif de connaissance inétenchable, il n'est jamais trop tard pour moi d'apprendre de
+            nouvelle choses.</p>
+        <p class="question">Je peux avoir un autographe ?</p>
+        <p class="answer">Vous l'aurez en bas de mon futur contrat.</p>
+        <p class="question">Quel salaire envisagez-vous ?</p>
+        <p class="answer">Je n'en ai pas en tête, suffisament pour pouvoir emmener ma DeLorean à sa révision mensuelle.
+        </p>
+        <p class="question">Avez-vous des qualités principales ?</p>
+        <p class="answer">Je dirait sans hésiter : beau, dans la force de l'âge et sain d'esprit.</p>
+        <p class="question">Existe-t'il encore des personnes qui vous inspirent dans ce monde ?</p>
+        <p class="answer">Philippe Candeloro, réellement je n'ai jamais connu quelqu'un d'aussi exceptionnel, c'est une
+            source d'inspiration quotidienne.</p>
+    </div>
+
+
     <footer class="foot">
         <ul class="icons">
-            <li class="insta"><a href="https://www.instagram.com/mrchristopherlloyd/?hl=fr"><i class="fab fa-instagram" ></i></a></li>
-            <li class="facebook"><a href="https://www.facebook.com/thechristopherlloyd"><i class="fab fa-facebook-f" ></i> </i></a></li>
-            <li class="linkedin"><a href="https://www.linkedin.com/company/mad-scientist/"><i class="fab fa-linkedin-in" ></i></i></a></li>
+            <li class="insta"><a href="https://www.instagram.com/mrchristopherlloyd/?hl=fr"><i
+                        class="fab fa-instagram"></i></a></li>
+            <li class="facebook"><a href="https://www.facebook.com/thechristopherlloyd"><i
+                        class="fab fa-facebook-f"></i> </i></a></li>
+            <li class="linkedin"><a href="https://www.linkedin.com/company/mad-scientist/"><i
+                        class="fab fa-linkedin-in"></i></i></a></li>
         </ul>
 
-        <button  class="title-faq" id="faqbtn">FAQ</button>
+        <button class="title-faq" id="faqbtn">FAQ</button>
 
-        <div id="faq" class="hide">
-            <p class="question">Est-ce que je peut conduire la DeLorean ?</p>
-            <p class="answer">Malheureusment après mon dernier voyage, elle ne peut plus accepter personne autre que moi, elle est devenu dans un sens indépendante.</p>
-            <p class="question">Pourquoi chercher du travail après avoir déjà accompli tant de choses ?</p>
-            <p class="answer">Ayant une soif de connaissance inétenchable, il n'est jamais trop tard pour moi d'apprendre de nouvelle choses.</p>
-            <p class="question">Je peux avoir un autographe ?</p>
-            <p class="answer">Vous l'aurez en bas de mon futur contrat.</p>
-            <p class="question">Quel salaire envisagez-vous ?</p>
-            <p class="answer">Je n'en ai pas en tête, suffisament pour pouvoir emmener ma DeLorean à sa révision mensuelle.</p>
-            <p class="question">Avez-vous des qualités principales ?</p>
-            <p class="answer">Je dirait sans hésiter : beau, dans la force de l'âge et sain d'esprit.</p>
-            <p class="question">Existe-t'il encore des personnes qui vous inspirent dans ce monde ?</p>
-            <p class="answer">Philippe Candeloro, réellement je n'ai jamais connu quelqu'un d'aussi exceptionnel, c'est une source d'inspiration quotidienne.</p>
-        </div> 
 
         <div class="top"><a href="#"><i class="fas fa-arrow-circle-up"></i></a></div>
 
@@ -57,4 +73,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
