--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p class="question">Avez-vous des qualités principales ?</p>
         <p class="answer">Je dirait sans hésiter : beau, dans la force de l'âge et sain d'esprit.</p>
         <p class="question">Existe-t'il encore des personnes qui vous inspirent dans ce monde ?</p>
-        <p class="answer">Philippe Candeloro, réellement je n'ai jamais connu quelqu'un d'aussi exceptionnel, c'est une
+        <p class="answer" style="margin-bottom: 0;padding-bottom: 64px;">Philippe Candeloro, réellement je n'ai jamais connu quelqu'un d'aussi exceptionnel, c'est une
             source d'inspiration quotidienne.</p>
     </div>
 
@@ -55,8 +55,8 @@
         <ul class="icons">
             <li class="insta"><a href="https://www.instagram.com/mrchristopherlloyd/?hl=fr"><i
                         class="fab fa-instagram"></i></a></li>
-            <li class="facebook"><a href="https://www.facebook.com/thechristopherlloyd"><i
-                        class="fab fa-facebook-f"></i> </i></a></li>
+            <li class="facebook"><a href="https://github.com/chrislloyd"><i
+                        class="fab fa-github"></i></a></li>
             <li class="linkedin"><a href="https://www.linkedin.com/company/mad-scientist/"><i
                         class="fab fa-linkedin-in"></i></i></a></li>
         </ul>
