--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
         <section id="profile">
             <img src="Assets/docpicture.png" alt="avatarDoc">
+            <img src="Assets/docpicture.png" alt="avatarDoc">
+            <img src="Assets/docpicture.png" alt="avatarDoc">
+            <img src="Assets/docpicture.png" alt="avatarDoc">
         </section>
         <section id="experience"></section>
         <section id="education"></section>
@@ -34,7 +37,7 @@
         <p class="foire">Foire aux questions</p>
         <p class="question">Est-ce que je peut conduire la DeLorean ?</p>
         <p class="answer">Malheureusment après mon dernier voyage, elle ne peut plus accepter personne autre que moi,
-            elle est devenu dans un sens indépendante.</p>
+            elle est devenu, dans un sens, indépendante.</p>
         <p class="question">Pourquoi chercher du travail après avoir déjà accompli tant de choses ?</p>
         <p class="answer">Ayant une soif de connaissance inétenchable, il n'est jamais trop tard pour moi d'apprendre de
             nouvelle choses.</p>
@@ -46,8 +49,9 @@
         <p class="question">Avez-vous des qualités principales ?</p>
         <p class="answer">Je dirait sans hésiter : beau, dans la force de l'âge et sain d'esprit.</p>
         <p class="question">Existe-t'il encore des personnes qui vous inspirent dans ce monde ?</p>
-        <p class="answer" style="margin-bottom: 0;padding-bottom: 64px;">Philippe Candeloro, réellement je n'ai jamais connu quelqu'un d'aussi exceptionnel, c'est une
+        <p class="answer">Philippe Candeloro, réellement je n'ai jamais connu quelqu'un d'aussi exceptionnel, c'est une
             source d'inspiration quotidienne.</p>
+        <p class="atom"><i class="fas fa-atom"></i></p>
     </div>
 
 
