--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p class="question">Existe-t'il encore des personnes qui vous inspirent dans ce monde ?</p>
         <p class="answer">Philippe Candeloro, réellement je n'ai jamais connu quelqu'un d'aussi exceptionnel, c'est une
             source d'inspiration quotidienne.</p>
-        <p class="atom"><i class="fas fa-atom"></i></p>
+        <p class="atom"><img class="delo" src="https://www.flaticon.com/svg/static/icons/svg/86/86503.svg"></p>
     </div>
 
 
