--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p class="foire">Foire aux questions</p>
         <p class="question">Est-ce que je peut conduire la DeLorean ?</p>
         <p class="answer">Malheureusment après mon dernier voyage, elle ne peut plus accepter personne autre que moi,
-            elle est devenu, dans un sens, indépendante.</p>
+            elle est devenu très capricieuse.</p>
         <p class="question">Pourquoi chercher du travail après avoir déjà accompli tant de choses ?</p>
         <p class="answer">Ayant une soif de connaissance inétenchable, il n'est jamais trop tard pour moi d'apprendre de
             nouvelle choses.</p>
