--- a/index.html
+++ b/index.html
@@ -13,21 +13,11 @@
 <body>
     <header>
         <nav>
-            <h1>Dr. Emmett Brown</h1>
+            <h1></h1>
         </nav>
     </header>
     <main>
-        <h2>Hello World</h2>
-        <p>Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing</a> elit. Libero temporibus maxime eius!
-            Asperiores vitae dignissimos accusamus repudiandae officia ratione, at nostrum sapiente eveniet esse a in
-            quae, voluptas vel iste.</p>
-
-        <section id="profile">
-            <img src="Assets/docpicture.png" alt="avatarDoc">
-            <img src="Assets/docpicture.png" alt="avatarDoc">
-            <img src="Assets/docpicture.png" alt="avatarDoc">
-            <img src="Assets/docpicture.png" alt="avatarDoc">
-        </section>
+        <section id="profile"></section>
         <section id="experience"></section>
         <section id="education"></section>
         <section id="contact"></section>
@@ -59,8 +49,7 @@
         <ul class="icons">
             <li class="insta"><a href="https://www.instagram.com/mrchristopherlloyd/?hl=fr"><i
                         class="fab fa-instagram"></i></a></li>
-            <li class="facebook"><a href="https://github.com/chrislloyd"><i
-                        class="fab fa-github"></i></a></li>
+            <li class="facebook"><a href="https://github.com/chrislloyd"><i class="fab fa-github"></i></a></li>
             <li class="linkedin"><a href="https://www.linkedin.com/company/mad-scientist/"><i
                         class="fab fa-linkedin-in"></i></i></a></li>
         </ul>
@@ -75,7 +64,7 @@
 
     </footer>
 
-    <script src="script.js"></script>
+    <script src="footer.js"></script>
 </body>
 
 </html>
