--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <h1>Dr. Emmett Brown</h1>
+           
         </nav>
     </header>
     <main>
@@ -19,14 +19,21 @@
         <section id="experience"></section>
         <section id="education"></section>
         <section id="contact">
-            <form action="">
-                <h2 class="contact">Contact me</h2>
-                <input type="name" placeholder="Votre nom">
-                <input type="text" placeholder="société">
-                <input type="text" placeholder="0601020304">
-                <input type="email" placeholder="@">
-                <textarea placeholder="Your message"></textarea>
-            </form>
+            <div class="contact_me">
+                <form class="form">
+                    <h2 class="contact">Contact</h2>
+                    <input type="name" placeholder="Votre Nom" class="formulary">
+                    <input type="text" placeholder="société" class="formulary">
+                    <input type="text" placeholder="0601020304" class="formulary">
+                    <input type="email" placeholder="nom@email.com" class="formulary">
+                    <textarea placeholder="Your message"></textarea>
+                </form>
+                <button>Envoyer</button>
+            </div>
+            
+            <div class="géolocalisation">
+
+            </div>
         </section>
     </main>
     <footer>
