--- a/index.html
+++ b/index.html
@@ -14,191 +14,124 @@
 
 <body>
     <header>
-        <nav>
- 
+        <article class="title">
+            <h1>Dr. Emmett Brown</h1>
+            <p>Savant Fou</p>
+        </article>
+        <article class="menu-mobile-container">
+            <a href="#" class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </a>
+            <div id="menu-mobile" class="hidden-desktop hidden">
+                <ul>
+                    <a href="#profile">
+                        <li>Profile</li>
+                    </a>
+                    <a href="#experience">
+                        <li>Experiences</li>
+                    </a>
+                    <a href="#competences">
+                        <li>Competences</li>
+                    </a>
+                    <a href="#education">
+                        <li>Etudes</li>
+                    </a>
+                    <a href="#contact">
+                        <li>Contact</li>
+                    </a>
+                </ul>
+            </div>
+        </article>
+        <nav id="menu-desktop" class="hidden-mobile">
+            <ul>
+                <a href="#profile">
+                    <li>Profile</li>
+                </a>
+                <a href="#experience">
+                    <li>Experiences</li>
+                </a>
+                <a href="#competences">
+                    <li>Competences</li>
+                </a>
+                <a href="#education">
+                    <li>Etudes</li>
+                </a>
+                <a href="#contact">
+                    <li>Contact</li>
+                </a>
+            </ul>
         </nav>
     </header>
 
     <main>
-
         <section id="profile">
-            <img src="Assets/portraitDoc.jpeg" alt="avatarDoc">
-
-        <section id="profile">  
-
-
- 
         </section>
 
-        
+        <section id="experience">
 
-            <section id="experience">
-
-
-                <h2 class="diplomesTitle"> DIPLÔMES ET COMPETENCES </h2>
-                <br>
-                <div class="textDiplomes">
-
-
-
-                    <p class="fontXp"> Doctorat en physique nucléaire - Institut technologique de Californie </p>
-
-
-                    <p class="fontXp"> Collaborateur du projet Manhattan - 1942 </p>
-
-
-
-                    <p class="fontXp"> Inventeur du casque lecteur de pensées </p>
-
-
-                    <p class="fontXp"> Inventeur du convecteur temporel à fission nucléaire </p>
-
-
-                    <p class="fontXp"> Inventeur de la Delorean qui voyage à travers le temps </p>
-
-                </div>
-
-                </p>
-            </section>
-            <div class="delorean">
-
-                <img src="Assets/delorean2.gif">
-
+            <h2 class="diplomesTitle"> DIPLÔMES ET COMPETENCES </h2>
+            <div class="textDiplomes">
+                <p class="fontXp"> Doctorat en physique nucléaire - Institut technologique de Californie </p>
+                <p class="fontXp"> Collaborateur du projet Manhattan - 1942 </p>
+                <p class="fontXp"> Inventeur du casque lecteur de pensées </p>
+                <p class="fontXp"> Inventeur du convecteur temporel à fission nucléaire </p>
+                <p class="fontXp"> Inventeur de la Delorean qui voyage à travers le temps </p>
             </div>
-
-
-            <section id="competences">
-                <h2 class="competencesTitle"> DIFFERENTS DOMAINES D'EXPERTISE</h2>
-
-                <div class="logos">
-                    <i class="fas fa-atom fa-3x"></i>
-
-                    <i class="fas fa-flask fa-3x"></i>
-
-                    <i class="fas fa-radiation-alt fa-3x"></i>
-
-                    <i class="fas fa-microscope fa-3x"></i>
-
-                    <i class="fas fa-robot fa-3x"></i>
-
-                    <i class="fas fa-hourglass-half fa-3x   "></i>
-
-                    <i class="fas fa-tachometer-alt fa-3x"></i>
-
-                    <i class="fas fa-microchip fa-3x"></i>
-
-
-                </div>
-                <div class="expertiseFont">
-                    <p class="fontXp">
-                        Thérmodynamique nucléaire
-                    </p>
-
-                    <p class="fontXp">
-                        Chimie organique et moléculaire
-                    </p>
-
-                    <p class="fontXp">
-
-                        Fission nucléaire
-                    </p>
-                    <p class="fontXp">
-                        Etude cellulaire
-
-                    </p>
-                    <p class="fontXp">
-
-                        Contrôle de facteurs de vélocité pour véhicules à combustion thermo nucléaire
-                    </p>
-
-                    <p class="fontXp">
-
-                        Dynamisation et programmation algorithmique
-
-                    </p>
-                    <p class="fontXp">
-
-                        Paramètrage de dispositifs électroniques à énergie à photons
-                    </p>
-                    <p class="fontXp">
-                        Mécanique automobile </p>
-
-                    </p>
-                </div>
-
-
-
-
-
-
-
-
-            </section>
-
-
-            <section id="education"></section>
-            <section id="contact"></section>
+            <div class="delorean">
+                <img src="Assets/delorean2.gif">
+            </div>
+        </section>
+        <section id="competences">
+            <h2 class="competencesTitle"> DIFFERENTS DOMAINES D'EXPERTISE</h2>
+            <div class="logos">
+                <i class="fas fa-atom fa-3x"></i>
+                <i class="fas fa-flask fa-3x"></i>
+                <i class="fas fa-radiation-alt fa-3x"></i>
+                <i class="fas fa-microscope fa-3x"></i>
+                <i class="fas fa-robot fa-3x"></i>
+                <i class="fas fa-hourglass-half fa-3x   "></i>
+                <i class="fas fa-tachometer-alt fa-3x"></i>
+                <i class="fas fa-microchip fa-3x"></i>
+            </div>
+            <div class="expertiseFont">
+                <p class="fontXp">Thérmodynamique nucléaire</p>
+                <p class="fontXp">
+                    Chimie organique et moléculaire
+                </p>
+                <p class="fontXp">
+                    Fission nucléaire
+                </p>
+                <p class="fontXp">
+                    Etude cellulaire
+                </p>
+                <p class="fontXp">
+                    Contrôle de facteurs de vélocité pour véhicules à combustion thermo nucléaire
+                </p>
+                <p class="fontXp">
+                    Dynamisation et programmation algorithmique
+                </p>
+                <p class="fontXp">
+                    Paramètrage de dispositifs électroniques à énergie à photons
+                </p>
+                <p class="fontXp">
+                    Mécanique automobile </p>
+                </p>
+            </div>
+        </section>
+        <section id="education"></section>
+        <section id="contact"></section>
 
     </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <div id="faq" class="hide">
-
         <p class="foire">Foire aux questions</p>
         <p class="question">Est-ce que je peut conduire la DeLorean ?</p>
         <p class="answer">Malheureusment après mon dernier voyage, elle ne peut plus accepter personne autre que
             moi, elle est devenu très capricieuse.</p>
         <p class="question">Pourquoi chercher du travail après avoir déjà accompli tant de choses ?</p>
-        <p class="answer">Ayant une soif de connaissance inétenchable, il n'est jamais trop tard pour moi d'apprendre de nouvelle choses.</p>
+        <p class="answer">Ayant une soif de connaissance inétenchable, il n'est jamais trop tard pour moi d'apprendre de
+            nouvelle choses.</p>
         <p class="question">Je peux avoir un autographe ?</p>
         <p class="answer">Vous l'aurez en bas de mon futur contrat.</p>
         <p class="question">Quel salaire envisagez-vous ?</p>
@@ -213,31 +146,19 @@
     </div>
 
 
-
-    </div>
-
     <footer class="foot">
-
         <ul class="icons">
-
             <li class="insta"><a href="https://www.instagram.com/mrchristopherlloyd/?hl=fr"><i
                         class="fab fa-instagram"></i></a></li>
-
             <li class="facebook"><a href="https://github.com/chrislloyd"><i class="fab fa-github"></i></a></li>
-
-
             <li class="linkedin"><a href="https://www.linkedin.com/company/mad-scientist/"><i
                         class="fab fa-linkedin-in"></i></i></a></li>
         </ul>
-
         <button class="title-faq" id="faqbtn">FAQ</button>
-
         <div class="top"><a href="#"><i class="fas fa-arrow-circle-up"></i></a></div>
-
     </footer>
-
-    <script src="footer.js"></script>
 
     <!-- Scripts -->
     <script src="/JS/header.js"></script>
+    <script src="/JS/footer.js"></script>
 </body>
