--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <p class="fontXp"> Inventeur de la Delorean qui voyage à travers le temps </p>
             </div>
             <div class="delorean">
-                <img src="Assets/delorean2.gif">
+                <img src="Assets/delorean2.gif" alt="Delorean">
             </div>
         </section>
         <section id="competences">
