modified display flex for experience section and placed temporary background colours for each sections

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <article class="title">
-            <h1>Dr. Emmett Brown</h1>
+            <a href="#"><h1>Dr. Emmett Brown</h1></a>
             <p>Savant Fou</p>
         </article>
         <article class="menu-mobile-container">
@@ -70,17 +70,18 @@
         </section>
 
         <section id="experience">
-
-            <h2 class="diplomesTitle"> DIPLÔMES ET COMPETENCES </h2>
-            <div class="textDiplomes">
-                <p class="fontXp"> Doctorat en physique nucléaire - Institut technologique de Californie </p>
-                <p class="fontXp"> Collaborateur du projet Manhattan - 1942 </p>
-                <p class="fontXp"> Inventeur du casque lecteur de pensées </p>
-                <p class="fontXp"> Inventeur du convecteur temporel à fission nucléaire </p>
-                <p class="fontXp"> Inventeur de la Delorean qui voyage à travers le temps </p>
+            <div class="diplomes-container">
+                <h2 class="diplomesTitle"> DIPLÔMES ET COMPETENCES </h2>
+                <div class="textDiplomes">
+                    <p class="fontXp"> Doctorat en physique nucléaire - Institut technologique de Californie </p>
+                    <p class="fontXp"> Collaborateur du projet Manhattan - 1942 </p>
+                    <p class="fontXp"> Inventeur du casque lecteur de pensées </p>
+                    <p class="fontXp"> Inventeur du convecteur temporel à fission nucléaire </p>
+                    <p class="fontXp"> Inventeur de la Delorean qui voyage à travers le temps </p>
+                </div>
             </div>
             <div class="delorean">
-                <img src="Assets/delorean2.gif" alt="Delorean">
+                <img src="Assets/delorean-floating.gif" alt="Delorean">
             </div>
         </section>
         <section id="competences">
