Change paths for scripts

--- a/index.html
+++ b/index.html
@@ -160,6 +160,6 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="/JS/header.js"></script>
-    <script src="/JS/footer.js"></script>
+    <script src="JS/header.js"></script>
+    <script src="JS/footer.js"></script>
 </body>
