Added hamburger animation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header id="header">
         <article class="title">
-            <a href="#"><h1>Dr. Emmett Brown</h1></a>
+            <h1><a href="#">Dr. Emmett Brown</a></h1>
             <p>Savant Fou</p>
         </article>
         <article class="menu-mobile-container">
