--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 
     <main>
         <section id="profile">
-            <img src="Assets/portraitDoc.jpeg" alt="avatarDoc"> 
+            <img 
+                srcset="Assets/portraitDoc.jpeg 320w, Assets/docPortraitLargeScreen.jpg 768w"
+                src="Assets/portraitDoc.jpeg" alt="avatarDoc"> 
             <div class="text">
                 <h2>About me</h2>
                 <p>Lorem ipsum dolor si si la famille, sit amet toi meme tu sais consectetur adipisicing elit. Omnis dolorum doloremque quasi nam maxime totam, aliquam, unde obcaecati possimus veritatis recusandae dolor ad velit, eligendi consectetur vero corporis minima placeat?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis dolorum doloremque quasi nam maxime totam, aliquam, unde obcaecati possimus veritatis recusandae dolor ad velit, eligendi consectetur vero corporis minima placeat?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis dolorum doloremque quasi nam maxime totam, aliquam, unde obcaecati possimus veritatis recusandae dolor ad velit, eligendi consectetur vero corporis minima placeat?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis dolorum doloremque quasi nam maxime totam, aliquam, unde obcaecati possimus veritatis recusandae dolor ad velit, eligendi consectetur vero corporis minima placeat?</p>
