--- a/index.html
+++ b/index.html
@@ -15,11 +15,19 @@
 <body>
     <header id="header">
         <article class="title">
-            <h1><a href="#">Dr. Emmett Brown</a></h1>
-            <p>Savant Fou</p>
+            <div>
+                <h1><a href="#">Dr. Emmett Brown</a></h1>
+                <p>Savant Fou</p>
+            </div>
         </article>
+        <div class="infos-container hidden">
+            <p><i class="fas fa-map-pin"></i>Hill Valley</p>
+            <p><i class="fas fa-birthday-cake"></i>Octobre 1920</p>
+            <p><i class="far fa-envelope-open"></i>emmett.brown@gmail.com</p>
+            <p><i class="fas fa-tty"></i>+228-627-0941</p>
+        </div>
         <article class="menu-mobile-container">
-            <a href="#" class="hamburger" id="hamburger">
+            <a href="javascript:;" class="hamburger" id="hamburger">
                 <span></span>
                 <span></span>
                 <span></span>
