save before pulling

--- a/index.html
+++ b/index.html
@@ -195,5 +195,5 @@
 
     <!-- Scripts -->
     <script src="/JS/header.js"></script>
-    <script src="/JS/footer.js"></script>
+    <script src="JS/footer.js"></script>
 </body>
