--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
                 </p>
             </div>
         </section>
+        <section id="hobbie" class="hobbies">
+            <!--Hobbies en titre, puis un carrousel avec des images de lui entrain de faire des trucs qui définieront ses hobbies-->
+
+ 
+        </section>
 
         <section id="education"></section>
         <section id="contact">
@@ -144,6 +149,7 @@
 
             </div>
         </section>
+
 
     </main>
     <div id="faq" class="hide">
