modif contact.css

--- a/index.html
+++ b/index.html
@@ -129,19 +129,34 @@
         <section id="education"></section>
         <section id="contact">
             <div class="contact_me">
+                <h2 class="contact">Contact</h2>
                 <form class="form">
-                    <h2 class="contact">Contact</h2>
-                    <input type="name" placeholder="Votre Nom" class="formulary">
-                    <input type="text" placeholder="société" class="formulary">
-                    <input type="text" placeholder="0601020304" class="formulary">
-                    <input type="email" placeholder="nom@email.com" class="formulary">
-                    <textarea placeholder="Your message"></textarea>
+                    <input type="name" placeholder="Votre Nom" class="formulary"><label for=""></label>
+                    <input type="text" placeholder="société" class="formulary"><label for=""></label>
+                    <input type="text" placeholder="0601020304" class="formulary"><label for=""></label>
+                    <input type="email" placeholder="nom@email.com" class="formulary"><label for=""></label>
+                    <textarea placeholder="Votre message" class="formulary"></textarea>
+                    <button>Envoyer</button>
                 </form>
-                <button>Envoyer</button>
             </div>
             
-            <div class="géolocalisation">
-
+            <div class="references">
+                <h2>Références</h2>
+                <div class="container_coat">
+                    <img src="/home/couturier/Bureau/Doc/Assets/marty.jpg" class="ref" alt="picture of marty macfly">
+                    <strong><p>Marty Macfly</p></strong>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti neque magnam od</p>
+                </div>
+                <div class="container_coat">
+                    <img src="/home/couturier/Bureau/Doc/Assets/biff.jpg" class="ref" alt="picture of biff tannen">
+                    <strong><p>Biff Tannen</p></strong>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti neque magnam od</p>
+                </div>
+                <div class="container_coat">
+                    <img src="/home/couturier/Bureau/Doc/Assets/einstein.jpg" class="ref" alt="picture of dog einstein">
+                    <strong><p>Einstein</p></strong>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti neque magnam od</p>
+                </div>
             </div>
         </section>
 
@@ -181,6 +196,6 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="/JS/header.js"></script>
-    <script src="/JS/footer.js"></script>
+    <script src="JS/header.js"></script>
+    <script src="JS/footer.js"></script>
 </body>
