--- a/index.html
+++ b/index.html
@@ -86,23 +86,26 @@
         <section id="experience">
             <h2>Experiences Professionnelles</h2>
             <article class="work-experience">
-                <h3>Janvier 1902- Novembre 1933</h3>
+                <h3>Janvier 1855- Novembre 1870</h3>
                 <ul>
-                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil nam optio, ullam fugiat, repellat ab eaque esse quas quibusdam quae soluta asperiores minus blanditiis sit consectetur maxime error harum eum.</li>
-                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil nam optio, ullam fugiat, repellat ab eaque esse quas quibusdam quae soluta asperiores minus blanditiis sit consectetur maxime error harum eum.</li>
-                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil nam optio, ullam fugiat, repellat ab eaque esse quas quibusdam quae soluta asperiores minus blanditiis sit consectetur maxime error harum eum.</li>
+                    <li>Maréchal-ferrant à Hill Valley</li>
+                    <li>Eleveur et dresseur de chevaux dans le Ranch Valley</li>
+                    <li>Ingénieur et chef de projet dans la mine d'excavation d'Hill Valley</li>
                 </ul>
-                <h3>Decembre 1976- Aout 1986</h3>
+                <h3>Decembre 1955- Aout 1986</h3>
                 <ul>
-                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil nam optio, ullam fugiat, repellat ab eaque esse quas quibusdam quae soluta asperiores minus blanditiis sit consectetur maxime error harum eum.</li>
-                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil nam optio, ullam fugiat, repellat ab eaque esse quas quibusdam quae soluta asperiores minus blanditiis sit consectetur maxime error harum eum.</li>
-                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil nam optio, ullam fugiat, repellat ab eaque esse quas quibusdam quae soluta asperiores minus blanditiis sit consectetur maxime error harum eum.</li>
+                    <li>Professeur enseignant la thermodynamique en génie nuclaire à l'institut technologique de Californie</li>
+                    <li>Chef de projet et coordinateur d'opérations technique pour le Projet Manhattan</li>
+                </ul>
+                <h3> Août  - Octobre  2015</h3>
+                <ul>
+                    <li> Gagnant d'un concours de voiture de collection à bord de la Delorean équipée d'un générateur à fusion</li>
                 </ul>
             </article>
-            <div class="delorean">
-                <img src="Assets/delorean-floating.gif" alt="Delorean">
-            </div>
         </section>
+                <div class="delorean">
+                    <img src="Assets/delorean-floating.gif" alt="Delorean">
+                </div>
         <section id="competences">
             <h2>Differents domaines d'expertises</h2>
             <div class="logos">         
