first work competences

--- a/index.html
+++ b/index.html
@@ -105,33 +105,25 @@
         </section>
         <section id="competences">
             <h2>Differents domaines d'expertises</h2>
-            <div class="logos">         
-                <figure>
-                    <i class="fas fa-atom fa-3x"></i>
-                    <i class="fas fa-flask fa-3x"></i>
-                </figure>
-                <figure>
-                    <i class="fas fa-radiation-alt fa-3x"></i>
-                    <i class="fas fa-microscope fa-3x"></i>
-                </figure>
-                <figure>
-                    <i class="fas fa-robot fa-3x"></i>
-                    <i class="fas fa-hourglass-half fa-3x"></i>
-                </figure>
-                <figure>
-                    <i class="fas fa-tachometer-alt fa-3x"></i>
-                    <i class="fas fa-microchip fa-3x"></i>
-                </figure>
+            <div class="chimie">         
+                <i class="fas fa-atom fa-3x"></i>
+                <h2 class="titre">Chimie organique et molécule</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
             </div>
-            <div class="expertiseFont">
-                <p>Thérmodynamique nucléaire</p>
-                <p>Chimie organique et moléculaire</p>
-                <p>Fission nucléaire</p>
-                <p>Etude cellulaire</p>
-                <p>Contrôle de facteurs de vélocité pour véhicules à combustion thermo nucléaire</p>
-                <p>Dynamisation et programmation algorithmique</p>
-                <p>Paramètrage de dispositifs électroniques à énergie à photons</p>
-                <p>Mécanique automobile </p>
+            <div class="etude-celulaire">         
+                <i class="fas fa-microscope fa-3x"></i>
+                <h2 class="titre">Etude cellulaire</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
+            </div>
+            <div class="chimie">         
+                <i class="fas fa-tachometer-alt fa-3x"></i>
+                <h2 class="titre">Contrôle de facteurs de vélocité pour véhicules à combustion thermo nucléaire</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
+            </div>
+            <div class="chimie">         
+                <i class="fas fa-robot fa-3x"></i>
+                <h2 class="titre">Dynamisation et programmation algorithmique</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
             </div>
         </section>
 
