add fonction required on form

--- a/index.html
+++ b/index.html
@@ -152,12 +152,13 @@
             <div class="contact-form">
                 <h2>Contact</h2>
                 <form class="form">
-                    <input type="name" placeholder="Votre Nom" class="formulary"><label for=""></label>
+                    <input type="name" placeholder="Votre Nom" class="formulary" required><label for=""></label>
                     <input type="text" placeholder="société" class="formulary"><label for=""></label>
-                    <input type="text" placeholder="0601020304" class="formulary"><label for=""></label>
-                    <input type="email" placeholder="nom@email.com" class="formulary"><label for=""></label>
+                    <input type="text" placeholder="0601020304" class="formulary" required><label for=""></label>
+                    <input type="email" placeholder="nom@email.com" class="formulary" required><label for=""></label>
                     <textarea placeholder="Votre message" class="formulary"></textarea>
                     <button>Envoyer</button>
+                    
                 </form>
             </div>
             
@@ -186,7 +187,7 @@
                         <img src="Assets/einstein.jpg" alt="picture of marty macfly">
                     </figure>
                     <div>
-                        <h3>Albert Einstein</h3>
+                        <h3>Einstein</h3>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti neque magnam od</p>    
                     </div>
                 </article>
