--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
         </section>
         <section id="hobbie" class="hobbies">
-            <div class="hobbies-title" >Mes hobbies</div>
+            <h2>Mes hobbies<h2>
 
             <div class="hobbies-slide"> 
 
