--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
                 <h2 class="titre">Etude cellulaire</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
             </div>
-            <div class="chimie">         
+            <div class="vehicule">         
                 <i class="fas fa-tachometer-alt fa-3x"></i>
                 <h2 class="titre">Contrôle de facteurs de vélocité pour véhicules à combustion thermo nucléaire</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
             </div>
-            <div class="chimie">         
+            <div class="alogo">         
                 <i class="fas fa-robot fa-3x"></i>
                 <h2 class="titre">Dynamisation et programmation algorithmique</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
