image adjustement mobile

--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
 
     <main>
         <section id="profile">
+            <div class="img-profile">
             <img 
                 srcset="Assets/portraitDoc.jpeg 320w, Assets/docPortraitLargeScreen.jpg 768w"
-                src="Assets/portraitDoc.jpeg" alt="avatarDoc"> 
+                src="Assets/portraitDoc.jpeg" alt="avatarDoc">
+            </div>
             <div class="text">
                 <h2>A Propos</h2>
                 <p>Lorem ipsum dolor si si la famille, sit amet toi meme tu sais consectetur adipisicing elit. Omnis dolorum doloremque quasi nam maxime totam, aliquam, unde obcaecati possimus veritatis recusandae dolor ad velit, eligendi consectetur vero corporis minima placeat?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis dolorum doloremque quasi nam maxime totam, aliquam, unde obcaecati possimus veritatis recusandae dolor ad velit, eligendi consectetur vero corporis minima placeat?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis dolorum doloremque quasi nam maxime totam, aliquam, unde obcaecati possimus veritatis recusandae dolor ad velit, eligendi consectetur vero corporis minima placeat?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis dolorum doloremque quasi nam maxime totam, aliquam, unde obcaecati possimus veritatis recusandae dolor ad velit, eligendi consectetur vero corporis minima placeat?</p>
