responsive and paralax until experiences section in place

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div id="menu-mobile" class="hidden-desktop hidden">
                 <ul>
                     <a href="#profile">
-                        <li>Profile</li>
+                        <li>A Propos</li>
                     </a>
                     <a href="#experience">
                         <li>Experiences</li>
@@ -44,10 +44,10 @@
                         <li>Competences</li>
                     </a>
                     <a href="#education">
-                        <li>Etudes</li>
+                        <li>Diplomes</li>
                     </a>
                     <a href="#contact">
-                        <li>Contact</li>
+                        <li>Me contacter</li>
                     </a>
                 </ul>
             </div>
@@ -55,7 +55,7 @@
         <nav id="menu-desktop" class="hidden-mobile">
             <ul>
                 <a href="#profile">
-                    <li>Profile</li>
+                    <li>A Propos</li>
                 </a>
                 <a href="#experience">
                     <li>Experiences</li>
@@ -64,10 +64,10 @@
                     <li>Competences</li>
                 </a>
                 <a href="#education">
-                    <li>Etudes</li>
+                    <li>Diplomes</li>
                 </a>
                 <a href="#contact">
-                    <li>Contact</li>
+                    <li>Me Contacter</li>
                 </a>
             </ul>
         </nav>
@@ -121,7 +121,7 @@
         <div id="paralax2" class="paralax-wrapper">
             <section id="competences">
                 <div class="sections-container">
-                    <h2>Differents domaines d'expertises</h2>
+                    <h2>Competences</h2>
                     <div class="chimie">         
                         <i class="fas fa-atom fa-3x"></i>
                         <h2 class="titre">Chimie organique et molécule</h2>
@@ -147,7 +147,7 @@
 
             <section id="education">
                 <div class="diplomes-container">
-                    <h2 class="diplomesTitle"> Diplomes et competences </h2>
+                    <h2 class="diplomesTitle"> Diplomes et reconnaisances</h2>
                     <div class="textDiplomes">
                         <p class="fontXp"> Doctorat en physique nucléaire - Institut technologique de Californie </p>
                         <p class="fontXp"> Collaborateur du projet Manhattan - 1942 </p>
@@ -158,7 +158,7 @@
                 </div>
             </section>
             <section id="hobbie" class="hobbies">
-                <h2>Mes hobbies<h2>
+                <h2>Passions<h2>
 
                 <div class="hobbies-slide"> 
 
@@ -204,7 +204,7 @@
         </div>
         <section id="contact">
             <div class="contact-form">
-                <h2>Contact</h2>
+                <h2>Me Contacter</h2>
                 <form class="form">
                     <label for="name">Nom</label>
                     <input type="text" id="name" placeholder="Dupont" class="formulary" required>
