Finished reorganised section competences

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </section>
             <section id="experience">  
                 <div class="sections-container">
-                    <div class="title">
+                    <div class="titles">
                         <h2>Experiences Professionnelles</h2>
                     </div>
                     <div class="content-container">
@@ -121,26 +121,40 @@
         <div id="paralax2" class="paralax-wrapper">
             <section id="competences">
                 <div class="sections-container">
-                    <h2>Competences</h2>
-                    <div class="chimie">         
-                        <i class="fas fa-atom fa-3x"></i>
-                        <h2 class="titre">Chimie organique et molécule</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
+                    <div class="titles">
+                        <h2>Competences</h2>
                     </div>
-                    <div class="etude-celulaire">         
-                        <i class="fas fa-microscope fa-3x"></i>
-                        <h2 class="titre">Etude cellulaire</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
-                    </div>
-                    <div class="vehicule">         
-                        <i class="fas fa-tachometer-alt fa-3x"></i>
-                        <h2 class="titre">Contrôle de facteurs de vélocité pour véhicules à combustion thermo nucléaire</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
-                    </div>
-                    <div class="alogo">         
-                        <i class="fas fa-robot fa-3x"></i>
-                        <h2 class="titre">Dynamisation et programmation algorithmique</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
+                    <div class="content-container">
+                        <article class="competences-card">
+                            <div class="header-card">         
+                                <i class="fas fa-atom"></i>
+                                <h3>Chimie organique et molécule</h3>
+                            </div>
+                            <div class="body-card">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
+                            </div>
+                        </article>
+                        <article class="competences-card">
+                            <div class="etude-celulaire">         
+                                <i class="fas fa-microscope"></i>
+                                <h3>Etude cellulaire</h3>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
+                            </div>
+                        </article>
+                        <article class="competences-card">
+                            <div class="vehicule">         
+                                <i class="fas fa-tachometer-alt"></i>
+                                <h3>Contrôle de facteurs de vélocité pour véhicules à combustion thermo nucléaire</h3>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
+                            </div>
+                        </article>
+                        <article class="competences-card">
+                            <div class="alogo">         
+                                <i class="fas fa-robot"></i>
+                                <h3>Dynamisation et programmation algorithmique</h3>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
+                            </div>
+                        </article>
                     </div>
                 </div>
             </section>
