last modif of competences

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <img src="Assets/delorean-floating.gif" alt="Delorean">
                             </div>
         </section>
-        <section id="competences">
+        <section id="domaines-expertise">
             <h2>Differents domaines d'expertise</h2>
              <article class="expertise">
                 <div class="chimie">         
