added external links to header

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="infos-container hidden">
             <p><i class="fas fa-map-pin"></i>Hill Valley</p>
             <p><i class="fas fa-birthday-cake"></i>Octobre 1920</p>
-            <p><i class="fas fa-tty"></i>+228-627-0941</p>
-            <p><i class="far fa-envelope-open"></i>emmett.brown@gmail.com</p>    
+            <p><a href="tel:+2286270941"><i class="fas fa-tty"></i>+228-627-0941</a></p>
+            <p><a href="mailto:emmett.brown@gmail.com"><i class="far fa-envelope-open"></i>emmett.brown@gmail.com</a></p>    
         </div>
         <article class="menu-mobile-container">
             <a href="javascript:;" class="hamburger" id="hamburger">
