added real texts on the Competences part

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                 <h3>Chimie organique et molécule</h3>
                             </div>
                             <div class="body-card">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
+                                <p>La chimie moléculaire est la science de l’étude des molécules élémentaires biologiques, organiques, ou inorganiques. Elle permet de comprendre et définir les méthodes de synthèse de ces composés essentiels aux développements d’applications à l’interface avec la médecine</p>
                             </div>
                         </article>
                         <article class="competences-card">
@@ -141,7 +141,7 @@
                                 <h3>Etude cellulaire</h3>
                             </div>
                             <div class="body-card">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
+                                <p>La biologie cellulaire (anciennement appelée cytologie ) est une discipline scientifique qui étudie les cellules, du point de vue structural et fonctionnel, et les utilise pour des applications en biotechnologie. Ce domaine d'expertise nécessite une haute compréhension de l'environnement</p>
                             </div>
                         </article>
                         <article class="competences-card">
@@ -150,7 +150,7 @@
                                 <h3>Contrôle de facteurs de vélocité pour véhicules à combustion thermo nucléaire</h3>
                             </div>
                             <div class="body-card">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
+                                <p>La relativité de la vitesse est essentielle lors d'une combustion d'uranium ou plutonium permettant une fission nucléaire qui propulse de façon contrôlé les vecteurs à l'origine du voyage dans le continium espace-temps</p>
                             </div>
                         </article>
                         <article class="competences-card">
@@ -159,7 +159,7 @@
                                 <h3>Dynamisation et programmation algorithmique</h3>
                             </div>
                             <div class="body-card">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis magnam dolore harum odio iste, facilis praesentium aliquid explicabo qui rerum illo voluptates voluptatibus nostrum consequatur, natus incidunt odit voluptas sapiente?</p>
+                                <p>L'utilisation de procédés d'automatisation des machines se fait via des languages informatiques, avec la maîtrise du JavaScript il est possible de programmer des automates electroniques obéissant aux consignes renseignées dans le code source.</p>
                             </div>
                         </article>
                     </div>
