modif contact-css

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     <h2>Références</h2>
                     <article class="quote-card">
                         <figure>
-                            <img src="Assets/marty.jpg" alt="picture of marty macfly">
+                            <img src="Assets/image-Marty.jpeg" alt="picture of marty macfly">
                         </figure>
                         <div>
                             <h3>Marty Macfly</h3>
@@ -286,7 +286,7 @@
                     <hr>
                     <article class="quote-card">
                         <figure>
-                            <img src="Assets/biff.jpg" alt="picture of marty macfly">
+                            <img src="Assets/Image-Biff.jpg" alt="picture of marty macfly">
                         </figure>
                         <div>
                             <h3>Biff Tannen</h3>
@@ -296,7 +296,7 @@
                     <hr>
                     <article class="quote-card">
                         <figure>
-                            <img src="Assets/einstein.jpg" alt="picture of marty macfly">
+                            <img src="Assets/Image-Einstein.jpg" alt="picture of marty macfly">
                         </figure>
                         <div>
                             <h3>Einstein</h3>
