--- a/index.html
+++ b/index.html
@@ -255,58 +255,55 @@
             </section>
         </div>
         <div id="paralax5" class="paralax-wrapper">
-            <section id="contact">
-                <div class="sections-container">
-                    <div class="contact-form">
-                        <h2>Me Contacter</h2>
-                        <form class="form">
-                            <label for="name">Nom</label>
-                            <input type="text" id="name" placeholder="Dupont" class="formulary" required>
-                            <label for="society">Société</label>
-                            <input type="text" id="society" placeholder="Société S.A" class="formulary" required>
-                            <label for="phone">Téléphone</label>
-                            <input type="text" id="phone" placeholder="0601020304" class="formulary" required>
-                            <label for="email">E-mail</label>
-                            <input type="email" id="email" placeholder="nom@email.com" class="formulary" required>
-                            <textarea name="message" id="message" placeholder="Message" cols="30" rows="10"></textarea>
-                            <button>Envoyer</button>    
-                        </form>
-                    </div>
-                    
-                    <div class="references">
-                        <h2>Références</h2>
-                        <article class="quote-card">
-                            <figure>
-                                <img src="Assets/marty.jpg" alt="picture of marty macfly">
-                            </figure>
-                            <div>
-                                <h3>Marty Macfly</h3>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti neque magnam od</p>    
-                            </div>
-                        </article>
-                        <hr>
-                        <article class="quote-card">
-                            <figure>
-                                <img src="Assets/biff.jpg" alt="picture of marty macfly">
-                            </figure>
-                            <div>
-                                <h3>Biff Tannen</h3>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti neque magnam od</p>    
-                            </div>
-                        </article>
-                        <hr>
-                        <article class="quote-card">
-                            <figure>
-                                <img src="Assets/einstein.jpg" alt="picture of marty macfly">
-                            </figure>
-                            <div>
-                                <h3>Einstein</h3>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti neque magnam od</p>    
-                            </div>
-                        </article>
-                    </div>
+            <section id="contact" class="sections-container">
+                <div class="contact-form">
+                    <h2>Me Contacter</h2>
+                    <form class="form">
+                        <label for="name">Nom</label>
+                        <input type="text" id="name" placeholder="Dupont" class="formulary" required>
+                        <label for="society">Société</label>
+                        <input type="text" id="society" placeholder="Société S.A" class="formulary" required>
+                        <label for="phone">Téléphone</label>
+                        <input type="text" id="phone" placeholder="0601020304" class="formulary" required>
+                        <label for="email">E-mail</label>
+                        <input type="email" id="email" placeholder="nom@email.com" class="formulary" required>
+                        <textarea name="message" id="message" placeholder="Message" cols="30" rows="10"></textarea>
+                        <button>Envoyer</button>    
+                    </form>
                 </div>
-            </section>
+                <div class="references">
+                    <h2>Références</h2>
+                    <article class="quote-card">
+                        <figure>
+                            <img src="Assets/marty.jpg" alt="picture of marty macfly">
+                        </figure>
+                        <div>
+                            <h3>Marty Macfly</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti neque magnam od</p>    
+                        </div>
+                    </article>
+                    <hr>
+                    <article class="quote-card">
+                        <figure>
+                            <img src="Assets/biff.jpg" alt="picture of marty macfly">
+                        </figure>
+                        <div>
+                            <h3>Biff Tannen</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti neque magnam od</p>    
+                        </div>
+                    </article>
+                    <hr>
+                    <article class="quote-card">
+                        <figure>
+                            <img src="Assets/einstein.jpg" alt="picture of marty macfly">
+                        </figure>
+                        <div>
+                            <h3>Einstein</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti neque magnam od</p>    
+                        </div>
+                    </article>
+                </div>
+            </section>      
         </div>
     </main>
 
@@ -347,7 +344,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="JS/header.js"></script>
-    <script src="JS/footer.js"></script>
-    <script src="JS/slide.js"></script>
+    <script src="./JS/header.js"></script>
+    <script src="./JS/footer.js"></script>
+    <script src="./JS/slide.js"></script>
 </body>
