--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 <li class="linkedin"><a href="https://www.linkedin.com/company/mad-scientist/"><i
                             class="fab fa-linkedin-in"></i></i></a></li>
             </ul>
-            <button class="title-faq" id="faqbtn">FAQ</button>
+            <button class="title-faq" id="faqbtn">FAQ <i class="fas fa-angle-double-down" style="color: #122429;"></i></button>
         
             <div class="top"><a href="#"><i class="fas fa-arrow-circle-up"></i></a></div>
         </div>
