--- a/index.html
+++ b/index.html
@@ -268,7 +268,10 @@
                         <label for="email">E-mail</label>
                         <input type="email" id="email" placeholder="nom@email.com" class="formulary" required>
                         <textarea name="message" id="message" placeholder="Message" cols="30" rows="10"></textarea>
-                        <button>Envoyer</button>    
+                        <div class="button-container">
+                            <button>Envoyer</button>  
+                            <img src="/home/couturier/Bureau/Doc/Assets/button-contact.png" alt="envoyer" id="button-contact">  
+                        </div>
                     </form>
                 </div>
                 
